# crete1941

./: .gitignore  AllTests.hs  CliTest.hs  CombatRules.hs  CommandsInterpreter.hs  Common.hs  Crete1941.hs  Here.hs  IoTest.hs  Loader.hs  LoaderTest.hs  MovementRules.hs  NetworkTest.hs  Orders.hs  Palindrome.hs  Pieces.hs  PiecesTest.hs  README.org  ServerTest.hs  Terrain.hs  TestData.hs  TestUtilities.hs  Units.hs  crete1914.cabal  load.hs  stack.yaml
Commands/: IO.hs  JSON.hs  Log.hs  Server.hs
Loader/: Builder.hs  Communication.hs  Compiler.hs  FilesMonitor.hs  Recompile.hs
Terrain/: Simple.hs
