Name:           Crete1941
Version:        0.1
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Arnaud Bailly
Synopsis:       A computerized version of Crete 1941, a wargame published in Vae Victis in 1998
Build-Type:     Simple
Homepage:	http://www.oqube.com/projects/crete1941

Executable Crete1941
  Build-Depends:  containers
                , base
                , fgl
                , syb
                , template-haskell
                , time
                , directory
                , regex-posix
                , json
                , mtl
                , network
                , process
                , HUnit
                , QuickCheck
                , bytestring
                , utf8-string
                , filepath
                , regex-tdfa
  Main-Is:        Crete1941.hs
  Hs-Source-Dirs: .
